fixed some sidebar apps styling for more contrast and positioning of text

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -316,8 +316,8 @@ header {
           border-radius: 0;
           box-shadow: 3px 5px 5px rgb(0 0 0 / 15%);
           box-sizing: border-box;
-          margin-top: 51px;
-          max-height: calc(100% - 41px);
+          margin-top: 50px;
+          max-height: calc(100% - 50px);
           max-width: 500px;
           overflow-y: auto;
           padding: 0px;
@@ -373,7 +373,7 @@ header {
             background: var(--base-color);
             border-top: 2px solid var(--dark-color);
             bottom: 0;
-            color: var(--black);
+            color: var(--light-color);
             font-family: 'Consolas', sans-serif;
             font-size: 12px;
             font-weight: 500;
@@ -381,7 +381,7 @@ header {
             left: 0;
             letter-spacing: initial;
             margin-top: 20px;
-            padding: 10px 18px;
+            padding: 10px 18px 25px;
             position: absolute;
             right: 0;
             text-align: left;
